# c89stringutils

./: .cirrus.yml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Dockerfile.debian  LICENSE-APACHE  LICENSE-MIT  README.md  alpine.Dockerfile  build_msvc2005_wine.cmd  debian.Dockerfile  valgrind.supp
.github/workflows/: ci.yml  github-actions.yml  linux-Windows-macOS-sunOS.yml
c89stringutils/: CMakeLists.txt  c89stringutils_export_pregen.h  c89stringutils_log.h  c89stringutils_safecrt.c  c89stringutils_safecrt.h  c89stringutils_stdbool.h  c89stringutils_string_extras.c  c89stringutils_string_extras.h  stb_sprintf.h
c89stringutils/tests/: CMakeLists.txt  test.c  test_amalg.c  test_safecrt.h  test_string_extras.h
c89stringutils_tests/: CMakeLists.txt
c89stringutils_tests/test_c89stringutils/: CMakeLists.txt  test.c  test_string_extras.h
cmake/: CTestConfig.cmake  Config.cmake.in  LICENSE.txt  MultiCPackConfig.cmake  README.txt  Welcome.txt  config.h.in
cmake/scripts/: build_all.bat  build_cygwin.bat  build_mingw64.bat  build_mingw86.bat  build_msvc64_2005.bat  build_msvc64_2022.bat  build_msvc86_2005.bat  build_msvc86_2022.bat  build_openwatcom_dos.bat
scripts/: codecov_badge_gen.sh  run_custom_checks.sh  test_doc.py  update_shields.py
